2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonmount.c:
        (foreign_volume_removed):
	Avoid deadlock when foreign volume is removed.

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (dir_default_iter_process),
	(do_enumerate):
	don't list "." and ".." directories.

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_create):
	fail if the file to be created already exists

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	set anonymous login to FALSE, no uninitialized variables please.
	* hal/ghalvolumemonitor.c: (adopt_orphan_mount):
	fix warning due to glib changes

2008-03-05  Bastien Nocera  <hadess@hadess.net>

	* INSTALL: Add mention of obex-data-server

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (dir_default_get_root):
	the proper icon name is folder-remote, not remote-folder.
	really fixed #520189

2008-03-05  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Disable gphoto2 building when
	HAL is disabled as well (Closes: #519872)

2008-03-05  Bastien Nocera  <hadess@hadess.net>

	* client/gvfsuriutils.c (g_vfs_decode_uri):
	Fix parsing of IPv6-style hostnames to not find the
	port in the path section of the URI, fixes browing
	browsing ObexFTP on Nokia Series 60 phones which show
	drive letters as directories in the root (eg. "C:")
	(Closes: #520314)

	* client/test-uri-utils.c (main): Add test for the above,
	and another test for the IPv4-style URIs

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsdaemonutils.c:
	(gvfs_file_info_populate_content_types):
	add text-x-generic mime type as a last fallback option.
	Fixes #520189

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	rewrite file info construction and directory listing. It should now
	correctly resolve symlinks and be fast enough for general use.

2008-03-05  Bastien Nocera  <hadess@hadess.net>
