@@ -1,3 +1,8 @@
+2008-03-06  Benjamin Otte  <otte@gnome.org>
+
+	* daemon/gvfsbackendftp.c: (do_move):
+	fail if file exists
+
 2008-03-06  Alexander Larsson  <alexl@redhat.com>
 
         * client/gdaemonmount.c:
